JDS MAPINFO fix
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@351 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/docs/legacy.css
+++ b/docs/legacy.css
@@ -96,11 +96,15 @@ table.def td.note
 {
   vertical-align: top;
   background: #202000;
-  padding: 0.3ex 1ex;
   text-align: center;
 }
 
-
+table.def td.warning
+{
+  vertical-align: top;
+  background: #703000;
+  text-align: center;
+}
 
 :link    { color: #80FF00; text-decoration: none; }
 :visited { color: #5EBB00; text-decoration: none; }
