Compilation instructions updated.
git-svn-id: https://svn.code.sf.net/p/doomlegacy/svn/legacy/trunk@495 5da24444-3c17-0410-b9f4-a1bbb4243164

--- a/docs/legacy.css
+++ b/docs/legacy.css
@@ -65,7 +65,8 @@ div.example
 div.code
 {
   white-space: pre;
-  background: #203000;
+  color: #CCCCCC;
+  background: #305090;
   margin: 0 5em 0 2em;
   padding: 0.2em 0.5em;
 }
